--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,3 +10,23 @@
 .nomargin {
   margin: auto 0;
 }
+
+
+.gallery {  
+  display: flex;
+  // margin: -1em 0 0 -1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 0;
+  margin-right: -1em;
+  align-items: center;
+  text-align: center;
+
+  a, img, div {
+    flex: 1;
+  }
+  
+  div {
+    padding-right: 1em;
+  }
+}
