--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,10 @@
 
 @import "whiteglass";
 
+body {
+  background: url('/assets/img/squairy_light.png');
+}
+
 .center {
   text-align: center;
 }
@@ -12,21 +16,72 @@
 }
 
 
-.gallery {  
+.grid {  
   display: flex;
   // margin: -1em 0 0 -1em;
+  flex-basis: content;
+  flex-grow: 0;
+  flex-shrink: 0;
   margin-top: 1em;
   margin-bottom: 1em;
   margin-left: 0;
   margin-right: -1em;
   align-items: center;
   text-align: center;
+  flex-basis: content;
 
   a, img, div {
     flex: 1;
   }
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 15px;    
+}
+
+.card {
+  text-align: center;
   
-  div {
-    padding-right: 1em;
+  img {
+    margin-bottom: 10px;
+    border-radius: 10px;
+    width: 254px;
+    height: 102px;
+    object-fit: fill;
+  }
+}
+
+.cv-data {
+  width: auto;
+  line-height: normal;
+  
+  td {
+    padding: 0.4em;
+    margin-bottom: 0.7em;
+    vertical-align: baseline
+  }
+  
+  td:first-child {
+    text-align: right;
+    border-bottom: 1px dotted $text-color;
+  }
+  
+  td:last-child {
+    border-bottom: 1px dotted $text-color;
+    border-left: 1px dotted $text-color;
+  }
+  
+  tr:last-child {
+    td {
+      border-bottom: none
+    }
+  }
+  
+  &.headers-on-left {
+    td:first-child {
+      font-weight: bold;
+    }
   }
 }
