--- a/assets/main.css
+++ b/assets/main.css
@@ -32,14 +32,15 @@ a:visited { color: #1d508f; }
 a:hover { color: #111; text-decoration: underline; }
 
 /** Blockquotes */
-blockquote { color: #828282; border-left: 4px solid #e8e8e8; padding-left: 15px; font-size: 18px; letter-spacing: -1px; font-style: italic; }
+blockquote { color: #757575; border-left: 4px solid #e8e8e8; padding-left: 15px; font-size: 18px; letter-spacing: -1px; font-style: italic; }
 blockquote > :last-child { margin-bottom: 0; }
+blockquote pre, blockquote code { color: #111; }
 
 /** Rules */
 hr { height: 4px; margin: 15px 0; border: 0; background-color: #e8e8e8; }
 
 /** Code formatting */
-pre, code { font-family: Monaco, Menlo, Consolas, "Courier New", DotumChe, monospace; font-size: 13px; border: 1px solid #e8e8e8; border-radius: 0; background-color: whitesmoke; }
+pre, code { font-family: Monaco, Menlo, Consolas, "Courier New", DotumChe, monospace; font-size: 13px; border: 1px solid #e8e8e8; border-radius: 0; background-color: #f8f8f8; }
 
 code { padding: 1px 5px; }
 
@@ -47,8 +48,8 @@ pre { padding: 8px 12px; overflow-x: auto; word-wrap: normal; }
 pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
 /** Wrapper */
-.wrapper { max-width: -webkit-calc(800px - (30px * 2)); max-width: calc(800px - (30px * 2)); margin-right: auto; margin-left: auto; padding-right: 30px; padding-left: 30px; }
-@media screen and (max-width: 800px) { .wrapper { max-width: -webkit-calc(800px - (30px)); max-width: calc(800px - (30px)); padding-right: 15px; padding-left: 15px; } }
+.wrapper { max-width: -webkit-calc(960px - (30px * 2)); max-width: calc(960px - (30px * 2)); margin-right: auto; margin-left: auto; padding-right: 30px; padding-left: 30px; }
+@media screen and (max-width: 800px) { .wrapper { max-width: -webkit-calc(960px - (30px)); max-width: calc(960px - (30px)); padding-right: 15px; padding-left: 15px; } }
 
 /** Clearfix */
 .wrapper:after, .pagination:after { content: ""; display: table; clear: both; }
@@ -66,7 +67,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
   .site-nav .page-link:not(:last-child) { margin-right: 0; } }
 
 /** Site footer */
-.site-footer { padding: 30px 0; font-size: 15px; color: #828282; text-align: center; }
+.site-footer { padding: 30px 0; font-size: 15px; color: #757575; text-align: center; }
 
 /** Page content */
 .page-content { padding: 30px 0; }
@@ -82,13 +83,13 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .post-archives .post-link { font-size: 24px; }
 .post-archives > li { margin-bottom: 30px; }
 
-.post-meta { font-size: 14px; color: #828282; }
+.post-meta { font-size: 14px; color: #757575; }
 
 .post-link, .post-link:visited { color: #111; }
 .post-link:hover { color: #2568ba; }
 
 .post-continue a { padding: 8px 15px; text-decoration: none; }
-.post-continue a, .post-continue a:visited { color: #828282; background-color: #e8e8e8; }
+.post-continue a, .post-continue a:visited { color: #424242; background-color: #e8e8e8; }
 .post-continue a:hover { color: white; background-color: #2568ba; }
 
 /** Posts */
@@ -109,57 +110,43 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
 /** Pagination */
 .pagination { padding: 15px 0; border-top: 1px solid #e8e8e8; border-bottom: 1px solid #e8e8e8; text-align: center; }
-.pagination a, .pagination a:visited { color: #828282; }
+.pagination a, .pagination a:visited { color: #757575; }
 .pagination a:hover { color: #2568ba; }
 .pagination .previous { float: left; }
 .pagination .next { float: right; }
 
 /** Syntax highlighting styles */
-.highlight { background-color: whitesmoke; }
-.highlighter-rouge .highlight { background-color: whitesmoke; }
-.highlight .c { color: #998; font-style: italic; }
+.highlight { background-color: #f8f8f8; }
+.highlighter-rouge .highlight { background-color: #f8f8f8; }
+.highlight .cm { color: #727262; font-style: italic; }
+.highlight .cp { color: #727272; font-weight: bold; }
+.highlight .c1 { color: #727262; font-style: italic; }
+.highlight .cs { color: #727272; font-weight: bold; font-style: italic; }
+.highlight .c, .highlight .cd { color: #727262; font-style: italic; }
 .highlight .err { color: #a61717; background-color: #e3d2d2; }
-.highlight .k { font-weight: bold; }
-.highlight .o { font-weight: bold; }
-.highlight .cm { color: #998; font-style: italic; }
-.highlight .cp { color: #999; font-weight: bold; }
-.highlight .c1 { color: #998; font-style: italic; }
-.highlight .cs { color: #999; font-weight: bold; font-style: italic; }
 .highlight .gd { color: #000; background-color: #fdd; }
-.highlight .gd .x { color: #000; background-color: #faa; }
-.highlight .ge { font-style: italic; }
+.highlight .ge { color: #000; font-style: italic; }
 .highlight .gr { color: #a00; }
-.highlight .gh { color: #999; }
+.highlight .gh { color: #727272; }
 .highlight .gi { color: #000; background-color: #dfd; }
-.highlight .gi .x { color: #000; background-color: #afa; }
-.highlight .go { color: #888; }
+.highlight .go { color: #727272; }
 .highlight .gp { color: #555; }
 .highlight .gs { font-weight: bold; }
-.highlight .gu { color: #aaa; }
+.highlight .gu { color: #727272; }
 .highlight .gt { color: #a00; }
-.highlight .kc { font-weight: bold; }
-.highlight .kd { font-weight: bold; }
-.highlight .kp { font-weight: bold; }
-.highlight .kr { font-weight: bold; }
+.highlight .kc { color: #000; font-weight: bold; }
+.highlight .kd { color: #000; font-weight: bold; }
+.highlight .kn { color: #000; font-weight: bold; }
+.highlight .kp { color: #000; font-weight: bold; }
+.highlight .kr { color: #000; font-weight: bold; }
 .highlight .kt { color: #458; font-weight: bold; }
-.highlight .m { color: #099; }
-.highlight .s { color: #d14; }
-.highlight .na { color: #008080; }
-.highlight .nb { color: #0086B3; }
-.highlight .nc { color: #458; font-weight: bold; }
-.highlight .no { color: #008080; }
-.highlight .ni { color: #800080; }
-.highlight .ne { color: #900; font-weight: bold; }
-.highlight .nf { color: #900; font-weight: bold; }
-.highlight .nn { color: #555; }
-.highlight .nt { color: #000080; }
-.highlight .nv { color: #008080; }
-.highlight .ow { font-weight: bold; }
-.highlight .w { color: #bbb; }
-.highlight .mf { color: #099; }
-.highlight .mh { color: #099; }
-.highlight .mi { color: #099; }
-.highlight .mo { color: #099; }
+.highlight .k, .highlight .kv { color: #000; font-weight: bold; }
+.highlight .mf { color: #007f7f; }
+.highlight .mh { color: #007f7f; }
+.highlight .il { color: #007f7f; }
+.highlight .mi { color: #007f7f; }
+.highlight .mo { color: #007f7f; }
+.highlight .m, .highlight .mb, .highlight .mx { color: #007f7f; }
 .highlight .sb { color: #d14; }
 .highlight .sc { color: #d14; }
 .highlight .sd { color: #d14; }
@@ -168,19 +155,55 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .highlight .sh { color: #d14; }
 .highlight .si { color: #d14; }
 .highlight .sx { color: #d14; }
-.highlight .sr { color: #009926; }
+.highlight .sr { color: #008522; }
 .highlight .s1 { color: #d14; }
 .highlight .ss { color: #990073; }
-.highlight .bp { color: #999; }
-.highlight .vc { color: #008080; }
-.highlight .vg { color: #008080; }
-.highlight .vi { color: #008080; }
-.highlight .il { color: #099; }
+.highlight .s { color: #d14; }
+.highlight .na { color: #007f7f; }
+.highlight .bp { color: #727272; }
+.highlight .nb { color: #007aa3; }
+.highlight .nc { color: #458; font-weight: bold; }
+.highlight .no { color: #007f7f; }
+.highlight .nd { color: #3c5d5d; font-weight: bold; }
+.highlight .ni { color: #800080; }
+.highlight .ne { color: #900; font-weight: bold; }
+.highlight .nf { color: #900; font-weight: bold; }
+.highlight .nl { color: #900; font-weight: bold; }
+.highlight .nn { color: #555; }
+.highlight .nt { color: #000080; }
+.highlight .vc { color: #007f7f; }
+.highlight .vg { color: #007f7f; }
+.highlight .vi { color: #007f7f; }
+.highlight .nv { color: #007f7f; }
+.highlight .ow { color: #000; font-weight: bold; }
+.highlight .o { color: #000; font-weight: bold; }
+.highlight .w { color: #727272; }
+
+body { background: url("/assets/img/squairy_light.png"); }
 
 .center { text-align: center; }
 
+.medium { width: 100%; max-width: calc(960px - 350px); }
+
 .nomargin { margin: auto 0; }
 
-.gallery { display: flex; margin-top: 1em; margin-bottom: 1em; margin-left: 0; margin-right: -1em; align-items: center; text-align: center; }
-.gallery a, .gallery img, .gallery div { flex: 1; }
-.gallery div { padding-right: 1em; }
+.gallery { display: grid; grid-template-columns: repeat(auto-fill, 254px); grid-gap: 15px; justify-content: center; }
+
+.tracklist { columns: 2; column-gap: 80px; width: 80%; margin: 0 auto; }
+.tracklist li { break-inside: avoid; font-style: italic; }
+.tracklist li .artist { font-weight: bold; font-style: normal; }
+
+@media screen and (max-width: 600px) { .tracklist { columns: 1; width: 85%; margin: auto; } }
+.card { text-align: center; width: 254px; }
+.card img { margin-bottom: 10px; border-radius: 10px; width: 254px; height: 102px; object-fit: cover; }
+
+.cv-data { width: auto; line-height: normal; }
+.cv-data td { padding: 0.4em; margin-bottom: 0.7em; vertical-align: baseline; }
+.cv-data td:first-child { text-align: right; border-bottom: 1px dotted #111; }
+.cv-data td:last-child { border-bottom: 1px dotted #111; border-left: 1px dotted #111; }
+.cv-data tr:last-child td { border-bottom: none; }
+.cv-data.headers-on-left td:first-child { font-weight: bold; }
+
+.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-bottom: 1em; }
+
+.embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
